added training and data loading scripts

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
-zel024/
 **/.ipynb_checkpoints/
-**/__pycache__/
+**/*.csv
+**/*.pkl
+**/*.pt
+**/*.gz
+**/*.pth
 **/.DS_Store
+.vscode/
+data/
+wandb/
+checkpoints/
+**/__pycache__/
+**/*__pycache__*
+**/*.cpython*.pyc
+**/*.egg-info*/
+run_docker.sh
